CloudFormation/highly-available-vpc.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
	"Description" : "Deploy a Highly Available VPC. Authored by Daniel Wright - http://iamaman.com.au",
  "Parameters": {
    "VPCCIDR": {
      "Type": "String",
      "Default": "10.100.0.0/16",
      "Description": "Enter the VPC CIDR Block"
    },
    "publicsubnet1cidr": {
      "Type": "String",
      "Default": "10.100.0.0/24",
      "Description": "Enter the Public Subnet 1 CIDR Block"
    },
    "publicsubnet2cidr": {
      "Type": "String",
      "Default": "10.100.4.0/24",
      "Description": "Enter the Public Subnet 2 CIDR Block"
    },
    "privatesubnet1cidr": {
      "Type": "String",
      "Default": "10.100.12.0/22",
      "Description": "Enter the Private Subnet 1 CIDR Block"
    },
    "privatesubnet2cidr": {
      "Type": "String",
      "Default": "10.100.20.0/22",
      "Description": "Enter the Private Subnet 2 CIDR Block"
    },
    "dbsubnet1cidr": {
      "Type": "String",
      "Default": "10.100.200.0/24",
      "Description": "Enter the DB Subnet 1 CIDR Block"
    },
    "dbsubnet2cidr": {
      "Type": "String",
      "Default": "10.100.210.0/24",
      "Description": "Enter the DB Subnet 2 CIDR Block"
    }
  },
  "Outputs": {
    "VPC": {
      "Description": "VPC ID",
      "Value": { "Ref": "VPC" }
    },
    "publicRouteTable": {
      "Description": "publicRouteTable ID",
      "Value": { "Ref": "publicRouteTable" }
    },
    "privateRouteTable1": {
      "Description": "privateRouteTable1 ID",
      "Value": { "Ref": "privateRouteTable1" }
    },
    "privateRouteTable2": {
      "Description": "privateRouteTable2 ID",
      "Value": { "Ref": "privateRouteTable2" }
    },
    "natGateway1": {
      "Description": "NAT Gateway 1 ID",
      "Value": { "Ref": "natGateway1" }
    },
    "natGateway2": {
      "Description": "NAT Gateway 2 ID",
      "Value": { "Ref": "natGateway2" }
    },
    "internetGateway": {
      "Description": "Internet Gateway 2 ID",
      "Value": { "Ref": "internetGateway" }
    },
    "PublicSUbnet1": {
      "Description": "Public Subnet/DMZ 1",
      "Value": { "Ref": "publicSubnet1" }
    },
    "publicSubnet2": {
      "Description": "Public Subnet/DMZ 2",
      "Value": { "Ref": "publicSubnet2" }
    },
    "privateSubnet1": {
      "Description": "Private Subnet 1",
      "Value": { "Ref": "privateSubnet1" }
    },
    "privateSubnet2": {
      "Description": "Private Subnet 2",
      "Value": { "Ref": "privateSubnet2" }
    },
    "dbSubnet1": {
      "Description": "Database Subnet 1",
      "Value": { "Ref": "dbSubnet1" }
    },
    "dbSubnet2": {
      "Description": "Database Subnet 2",
      "Value": { "Ref": "dbSubnet2" }
    }
  },
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": { "Ref": "VPCCIDR" }
      }
    },
    "internetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {}
    },
    "VPCGatewayAttach": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": { "Ref": "internetGateway" },
        "VpcId": { "Ref": "VPC" }
      }
    },
    "EIP1": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
			 "Domain": { "Ref": "VPC" }
      }
    },
    "EIP2": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": { "Ref": "VPC" }
      }
    },
    "publicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "AvailabilityZone": { "Fn::Select": [ "0", { "Fn::GetAZs": "" } ] },
        "CidrBlock": { "Ref": "publicsubnet1cidr" },
        "MapPublicIpOnLaunch": "True"
      }
    },
    "publicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "AvailabilityZone": { "Fn::Select": [ "1", { "Fn::GetAZs": "" } ] },
        "CidrBlock": { "Ref": "publicsubnet2cidr" },
        "MapPublicIpOnLaunch": "True"
      }
    },
    "privateSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "AvailabilityZone": { "Fn::Select": [ "0", { "Fn::GetAZs": "" } ] },
        "CidrBlock": { "Ref": "privatesubnet1cidr" }
      }
    },
    "privateSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "AvailabilityZone": { "Fn::Select": [ "1", { "Fn::GetAZs": "" } ] },
        "CidrBlock": { "Ref": "privatesubnet2cidr" }
      }
    },
    "dbSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "AvailabilityZone": { "Fn::Select": [ "0", { "Fn::GetAZs": "" } ] },
        "CidrBlock": { "Ref": "dbsubnet1cidr" }
      }
    },
    "dbSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "AvailabilityZone": { "Fn::Select": [ "1", { "Fn::GetAZs": "" } ] },
        "CidrBlock": { "Ref": "dbsubnet2cidr" }
      }
    },
    "publicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" }
      }
    },
    "privateRouteTable1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" }
      }
    },
    "privateRouteTable2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" }
      }
    },
    "publicRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "publicRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "internetGateway" }
      }
    },
    "privateRoute1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "privateRouteTable1" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "natGateway1" }
      }
    },
    "privateRoute2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "privateRouteTable2" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "natGateway2" }
      }
    },
    "subnetAssociation1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "publicRouteTable" },
        "SubnetId": { "Ref": "publicSubnet1" }
      }
    },
    "subnetAssociation2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "publicRouteTable" },
        "SubnetId": { "Ref": "publicSubnet2" }
      }
    },
    "subnetAssociation3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "privateRouteTable1" },
        "SubnetId": { "Ref": "privateSubnet1" }
      }
    },
    "subnetAssociation4": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "privateRouteTable1" },
        "SubnetId": { "Ref": "dbSubnet1" }
      }
    },
    "subnetAssociation5": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "privateRouteTable2" },
        "SubnetId": { "Ref": "privateSubnet2" }
      }
    },
    "subnetAssociation6": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "privateRouteTable2" },
        "SubnetId": { "Ref": "dbSubnet2" }
      },
      "natGateway1": {
        "Type": "AWS::EC2::NatGateway",
        "Properties": {
          "AllocationId": { "Fn::GetAtt": [ "EIP1", "AllocationId" ] },
          "SubnetId": { "Ref": "publicSubnet1" }
        }
      },
      "natGateway2": {
        "Type": "AWS::EC2::NatGateway",
          "Properties": {
          "AllocationId": { "Fn::GetAtt": [ "EIP2", "AllocationId" ] },
          "SubnetId": { "Ref": "publicSubnet2" }
      }
     }
    }
  }
}
